--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+:root {
+    --background-color: #fff;
+    --text-color: #222;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  body {
+    background-color: var(--background-color);
+    color: var(--text-color);
   }
-  to {
-    transform: rotate(360deg);
-  }
+  
+#header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 150px;
+
+}
+h1,p{
+    text-align: center;
+}
+#but{
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    background-color: blue;
+    color: white;
+    font-size: 1.1rem;
+    cursor: pointer;
+}
+p{
+    font-size: 1.3rem;
 }
